k8s/net/tailscale-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tailscale
  namespace: homelab
  labels:
    app: tailscale
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: tailscale
  template:
    metadata:
      labels:
        app: tailscale
    spec:
      hostNetwork: true
      containers:
      - name: tailscale
        image: tailscale/tailscale:latest
        volumeMounts:
        - name: tailscale-state
          mountPath: /var/lib/tailscale
        - name: dev-net-tun
          mountPath: /dev/net/tun
        securityContext:
          capabilities:
            add:
            - NET_ADMIN
            - NET_RAW
      volumes:
      - name: tailscale-state
        persistentVolumeClaim:
          claimName: tailscale-state
      - name: dev-net-tun
        hostPath:
          path: /dev/net/tun
          type: CharDevice
